--- a/tex/seq64_jack.tex
+++ b/tex/seq64_jack.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2016-01-28
-% \update      2017-12-10
+% \update      2018-02-02
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -72,7 +72,7 @@
       \item Fixes to JACK Master mode.
       \item Interactions with the Klick and Hydrogen applications.
       \item Patches from the new (!) version of Seq24, 0.9.3, to correct
-         for MIDI Clock drift.
+         for MIDI Clock drift over long durations.
    \end{enumerate}
 
    In the meantime, the text files in the project's \texttt{contrib/notes}
