Adding a MIDI Implementation Chart, still in progress.

--- a/tex/docs-structure.tex
+++ b/tex/docs-structure.tex
@@ -67,6 +67,10 @@
 \usepackage{relsize,etoolbox}          % http://ctan.org/pkg/{relsize,etoolbox}
 \AtBeginEnvironment{quotation}{\smaller}   % Step font down one size relatively
 
+% For the MIDI Implementation Chart
+
+\usepackage{makecell}
+
 % Doesn't seem to do anything:
 %
 % \usepackage{titlesec}         % for reducing space before headings
