--- a/tex/seq64_manpage.tex
+++ b/tex/seq64_manpage.tex
@@ -335,9 +335,9 @@
    \url{mailto:guido.scholz@bayernline.de} and Chris Ahlstrom
    \url{mailto:ahlstromcj@gmail.com}.
 
-   \begin{verbatim}
-Version 0.94.0                  November 4 2015                  sequencer64(1)
-   \end{verbatim}
+%   \begin{verbatim}
+% Version 0.94.0                      June 6 2017                  sequencer64(1)
+%   \end{verbatim}
 
 %-------------------------------------------------------------------------------
 % vim: ts=3 sw=3 et ft=tex
