--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2018-01-24
+% \update      2018-02-04
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -488,6 +488,12 @@
 % Man page
 
 \input{seq64_manpage}
+
+% MIDI implementation chart
+
+% \pagebreak
+% \input{seq64_midi_impl_chart}
+% \pagebreak
 
 % Important Concepts
 
