--- a/tex/seq64_manpage.tex
+++ b/tex/seq64_manpage.tex
@@ -288,6 +288,14 @@
             \texttt{--user-save} option to the command line.
             In that file, the options modified are \texttt{mainwnd\_rows} and
             \texttt{mainwnd\_cols}.
+         \item \texttt{scale=x.y}.
+            \index{scaling}
+            This option scales the main window by the factor x.y, which can
+            range from 0.75 to 3.0.  This makes the main window larger, and
+            most of its contents larger.  It does not currently scale the
+            font's used in the display.  A scale factor of 2.5 is about the
+            maximum useful value.  If multi-wid is active, then you probably
+            need a larger monitor to use this factor.
       \end{itemize}
 
    \texttt{\$HOME/.config/sequencer64.rc} holds the main configuration settings
