--- a/tex/seq64_song_editor.tex
+++ b/tex/seq64_song_editor.tex
@@ -32,13 +32,13 @@
    section of the "user" configuration file, two song editor windows can be
    brought onscreen, as a convenience for arranging projects with a large
    number of sequences/patterns.
-   It also provides the "song mode" of \textsl{Sequencert64},
-   as opposed to the "live mode" provided by the Patterns Panel, when
+   It also provides the \textbf{Song} mode of \textsl{Sequencert64},
+   as opposed to the \textbf{Live} mode provided by the Patterns Panel, when
    \textsl{Sequencer64} is running in ALSA mode.
-   (In JACK mode, the live versus song mode is controlled by the JACK start-mode
-   flag.)
+   (In JACK mode, the live versus song mode is controlled by the JACK
+   start-mode flag.)
 
-   When the Song Editor has the focus of the application, in ALSA mode, it
+   When the Song Editor has the focus of the application, it
    takes over control from the Patterns Panel.  The Song Editor then
    controls playback.  Once playback is started in the Song Editor, some actions
    in the Patterns Panel no longer have effect, effectively disabling live
@@ -170,8 +170,8 @@
    \index{keys!esc (stop)}
    The default keystroke for stopping playback is the \texttt{Escape} character.
    \index{keys!period (pause)}
-   The default keystroke for pausing playback is the \texttt{Period} character,
-   which currently works only in ALSA mode.
+   The default keystroke for pausing playback is the \texttt{Period} character.
+%  which currently works only in ALSA mode.
 
    \itempar{Play Loop}{song editor!play loop}
    \index{loop mode}
