--- a/tex/seq64_usr_file.tex
+++ b/tex/seq64_usr_file.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2018-01-24
+% \update      2018-04-29
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -868,6 +868,9 @@
    \end{verbatim}
 
    This log-file is written to the same directory as the "rc" and "usr" files.
+   If this file-name is empty, then a valid file-name must be specified
+   in the "--option log=filename.log" option.  Note that this file
+   is always written to the \textsl{Sequencer64} configuration directory.
 
 \subsection{Sequencer64 "usr" File / Device and Control Names}
 \label{subsec:seq64_usr_file_midi_bus_results}
