--- a/tex/seq64_patterns_panel.tex
+++ b/tex/seq64_patterns_panel.tex
@@ -477,6 +477,29 @@
          currently being edited.
    \end{itemize}
 
+   As of version 0.95, the user can also apply coloring to each sequence.
+   This feature was adopted from \textsl{Kepler34} (\cite{kepler34}).
+   Here is the new pattern menu for sequence color:
+   \index{pattern!color menu}
+
+\begin{figure}[H]
+   \centering 
+   \includegraphics[scale=0.75]{new/seq64-sequence-color-menu.png}
+   \caption{Sequence/Pattern Color Menu}
+   \label{fig:pattern_window_sequence_color_menu}
+\end{figure}
+
+   Here is a sample of the coloration as it appears in the patterns panel and
+   in the song editor:
+   \index{pattern!coloring}
+
+\begin{figure}[H]
+   \centering 
+   \includegraphics[scale=0.75]{new/seq64-sequence-coloration.png}
+   \caption{Sequence/Pattern Coloration}
+   \label{fig:pattern_window_sequence_coloration}
+\end{figure}
+
    \index{pattern!right click}
    \index{slot!empty slot right-click}
    By right-clicking on an empty box one brings up a menu to create
