--- a/tex/seq64_references.tex
+++ b/tex/seq64_references.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2017-11-05
+% \update      2018-05-28
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -43,6 +43,18 @@
    \url{http://www.linuxsynths.com/BristolPatchesDemos/bristol.html}.
    2014.
 
+   \bibitem{midimapper}
+   Coolsoft.
+   \emph{Coolsoft MIDIMapper (Windows).}
+   \url{https://coolsoft.altervista.org/en/midimapper}.
+   2018.
+
+   \bibitem{midisynth}
+   Coolsoft.
+   \emph{Coolsoft VirtualMIDISynth (Windows).}
+   \url{https://coolsoft.altervista.org/en/virtualmidisynth}.
+   2018.
+
    \bibitem{fluidsynth}
    FluidSynth team.
    \emph{FluidSynth: A SoundFont Synthesizer.}
@@ -60,6 +72,12 @@
    \emph{JACK Audio Connection Kit.}
    \url{http://jackaudio.org/}.
    2015.
+
+   \bibitem{kepler34}
+   Oli Kester.
+   \emph{Kepler34: Seq24 for the 2010s.}
+   \url{https://github.com/oli-kester/kepler34}.
+   2010-2016.
 
    \bibitem{layk}
    Lassi Ylikojola.
