Minor updates for pattern slots.

--- a/tex/seq64_patterns_panel.tex
+++ b/tex/seq64_patterns_panel.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2018-04-15
+% \update      2018-06-03
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -405,12 +405,18 @@
 
    \begin{itemize}
       \item The sequence number appears at the bottom left of the slot.
-      \item The hot-key for muting/unmuting the pattern appears at the bottom
-         right of the slot.
+      \item The buss number (re 0) and the channel number (re 1) appears
+         to the right of the sequence number, in the format "0-1".
+      \item To the right of that, the time signature ("4/4") appears, at the
+         bottom.
+      \item The hot-key for muting/unmuting the pattern appears next,
+         at the bottom right of the slot.
+      \item The title of the sequence appears at the top left of the pattern
+         slot.
       \item The length of the sequence, in number of measures (bars), appears
          at the upper right of the slot.
-      \item The default alternate font, which has a little more body than the
-         \textsl{Seq24} font.
+      \item Notice the default alternate font, which has a little more body
+         than the \textsl{Seq24} font.
    \end{itemize}
 
    Observe that feature in the first figure of the next section.
